Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -31,6 +31,10 @@ sidebar_position: 4
 - added internalName option for spo field commands [#6249](https://github.com/pnp/cli-microsoft365/issues/6249)
 - added 'groupName' option and deprecated 'groupDisplayName' on 'entra group member' commands [#6546](https://github.com/pnp/cli-microsoft365/issues/6546)
 - fixed spo pages commands [#6462](https://github.com/pnp/cli-microsoft365/issues/6462)
+- fixed 'page clientsidewebpart add' for vertical sections [#6265](https://github.com/pnp/cli-microsoft365/issues/6265)
+- fixed 'project upgrade guidance' order for v1.20 [#6602](https://github.com/pnp/cli-microsoft365/issues/6602)
+- renamed 'spo tenant homesite list' command [#6597](https://github.com/pnp/cli-microsoft365/issues/6597)
+- removed scope for deprecated Azure AD Graph API [#6594](https://github.com/pnp/cli-microsoft365/issues/6594)
 
 ## [v10.3.2](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.2)
 
