Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -35,6 +35,8 @@ sidebar_position: 4
 - fixed 'project upgrade guidance' order for v1.20 [#6602](https://github.com/pnp/cli-microsoft365/issues/6602)
 - renamed 'spo tenant homesite list' command [#6597](https://github.com/pnp/cli-microsoft365/issues/6597)
 - removed scope for deprecated Azure AD Graph API [#6594](https://github.com/pnp/cli-microsoft365/issues/6594)
+- fixed collecting telemetry
+- switched to Node@22 [#6604](https://github.com/pnp/cli-microsoft365/issues/6604)
 
 ## [v10.3.2](https://github.com/pnp/cli-microsoft365/releases/tag/v10.3.2)
 
