New command: m365 graph directoryextension add

--- a/docs/docs/cmd/graph/directoryextension/directoryextension-add.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # graph directoryextension add
 
-Create a new directory extension
+Creates a new directory extension
 
 ## Usage
 
@@ -30,7 +30,7 @@ m365 graph directoryextension add [options]
 `--dataType <dataType>`
 : The data type of the value the extension property can hold. Possible values are: `Binary`, `Boolean`, `DateTime`, `Integer`, `LargeInteger` and `String`.
 
-`targetObjects <targetObjects>`
+`--targetObjects <targetObjects>`
 : Comma-separated list of Microsoft Graph resources that can use the extension. Possible values are: `User`, `Group`, `Application`, `AdministrativeUnit`, `Device` and `Organization`.
 
 `--isMultiValued`
