--- a/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
@@ -19,7 +19,7 @@ m365 spo tenant homesite add [options]
 : URL of the site to use as a home site.
 
 `--isInDraftMode [isInDraftMode]`
-: Specifies whether the home site is in draft mode. Accepts `true` or `false`. Default is true. 
+: Specifies whether the home site is in draft mode. Accepts `true` or `false`. Default is `false`. 
 
 `--vivaConnectionsDefaultStart [vivaConnectionsDefaultStart]`
 : Specifies whether the home site is the default start for Viva Connections. Accepts `true` or `false`. Default is true
