--- a/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
@@ -25,7 +25,7 @@ m365 spo tenant homesite add [options]
 : Specifies whether the home site is the default start for Viva Connections. Accepts `true` or `false`. Default is true
 
 `--audiences [audiences]`
-: Comma-separated list of audience GUIDs which are GUIDs of Microsoft Entra groups.
+: Comma-separated list of Microsoft Entra group IDs that will be used as audience.
 
 `--order [order]`
 : Order of the home site. Must be an integer.
