--- a/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
@@ -39,7 +39,7 @@ The corresponding site must already be present within the tenant.
 
 ## Examples
 
-Add a Home Site
+Add a home site
 
 ```sh
 m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms"
