--- a/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-add.mdx
@@ -45,7 +45,7 @@ Add a home site
 m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms"
 ```
 
-Add a Home Site with optional parameters
+Add a home site with additional options
 
 ```sh
 m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms" --isInDraftMode true --vivaConnectionsDefaultStart false --audiences "af8c0bc8-7b1b-44b4-b087-ffcc8df70d16,754ff15c-76b1-44cb-88c7-0065a4d3cfb7" --order 2 
