--- a/docs/docs/cmd/entra/pim/pim-role-assignment-list.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-assignment-list.mdx
@@ -31,7 +31,10 @@ m365 entra pim role assignment list [options]
 : An optional ISO 8601 formatted date filter to search from.
 
 `--includePrincipalDetails`
-: An optional flag to include details of the principals that were assigned a role
+: (deprecated. Use option `withPrincipalDetails` instead) An optional flag to include details of the principals that were assigned a role.
+
+`--withPrincipalDetails`
+: An optional flag to include details of the principals that were assigned a role.
 ```
 
 <Global />
@@ -50,7 +53,7 @@ Get a list of Entra role assignments for the current user.
 m365 entra pim role assignment list --userId '@meID'
 ```
 
-Get a list of Entra role assignments since the first of January 2024
+Get a list of Entra role assignments since the first of January 2024.
 
 ```sh
 m365 entra pim role assignment list --startDateTime 2024-01-01T00:00:00Z
@@ -59,7 +62,7 @@ m365 entra pim role assignment list --startDateTime 2024-01-01T00:00:00Z
 Get a list of Entra role assignments with principal details.
 
 ```sh
-m365 entra pim role assignment list --includePrincipalDetails
+m365 entra pim role assignment list --withPrincipalDetails
 ```
 
 ## Response
@@ -135,9 +138,9 @@ m365 entra pim role assignment list --includePrincipalDetails
   </TabItem>
 </Tabs>
 
-### `includePrincipalDetails` response
+### `withPrincipalDetails` response
 
-When we make use of the option `includePrincipalDetails` the response will differ. 
+When we make use of the option `withPrincipalDetails` the response will differ. 
 
 <Tabs>
   <TabItem value="JSON">
@@ -201,7 +204,7 @@ When we make use of the option `includePrincipalDetails` the response will diffe
   <TabItem value="Markdown">
 
   ```md
-  # entra pim role assignment list --includePrincipalDetails "true"
+  # entra pim role assignment list --withPrincipalDetails "true"
 
   Date: 3/31/2024
 
