--- a/docs/docs/cmd/flow/flow-list.mdx
+++ b/docs/docs/cmd/flow/flow-list.mdx
@@ -22,6 +22,9 @@ m365 flow list [options]
 : List a specific type of flows. Valid values: `ownedByMe`, `personal`, `sharedWithMe`, `all`. Defaults to `ownedByMe`. Don't specify this option when using asAdmin.
 
 `--includeSolutions`
+: (deprecated. Use option `withSolutions` instead) Include flows from solutions.
+
+`--withSolutions`
 : Include flows from solutions.
 
 `--asAdmin`
@@ -49,28 +52,28 @@ When you specify a value for `sharingStatus`, consider the following:
 
 ## Examples
 
-List all your flows in the given environment
+List all your flows in the given environment.
 
 ```sh
 m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5
 ```
 
-List all flows in the given environment
+List all flows in the given environment.
 
 ```sh
 m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --asAdmin
 ```
 
-List all flows that are shared with the current user
+List all flows that are shared with the current user.
 
 ```sh
 m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --sharingStatus sharedWithMe
 ```
 
-List all personal flows and include flows from solutions
+List all personal flows and include flows from solutions.
 
 ```sh
-m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --sharingStatus personal --includeSolutions
+m365 flow list --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --sharingStatus personal --withSolutions
 ```
 
 ## Response
