--- a/docs/docs/cmd/flow/run/run-get.mdx
+++ b/docs/docs/cmd/flow/run/run-get.mdx
@@ -22,7 +22,7 @@ m365 flow run get [options]
 : The name of the Power Automate flow for which to retrieve information.
 
 `-e, --environmentName <environmentName>`
-: The name of the environment where the flow is located
+: The name of the environment where the flow is located.
 
 `--includeTriggerInformation`
 : (deprecated. Use option `withTrigger` instead) If specified, include information about the trigger details.
