--- a/docs/docs/cmd/pp/solution/solution-publisher-list.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-list.mdx
@@ -16,10 +16,13 @@ m365 pp solution publisher list [options]
 
 ```md definition-list
 `-e, --environmentName <environmentName>`
-: The name of the environment
+: The name of the environment.
 
 `--includeMicrosoftPublishers`
-: Include the Microsoft Publishers
+: (deprecated. Use option `withMicrosoftPublishers` instead) Include the Microsoft Publishers.
+
+`--withMicrosoftPublishers`
+: Include the Microsoft Publishers.
 
 `--asAdmin`
 : Run the command as admin for environments you do not have explicitly assigned permissions to.
@@ -29,13 +32,13 @@ m365 pp solution publisher list [options]
 
 ## Examples
 
-List all publishers in a specific environment
+List all publishers in a specific environment.
 
 ```sh
 m365 pp solution publisher list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339"
 ```
 
-List all publishers in a specific environment as Admin
+List all publishers in a specific environment as Admin.
 
 ```sh
 m365 pp solution publisher list --environmentName "Default-2ca3eaa5-140f-4175-8261-3272edf9f339" --asAdmin
