--- a/docs/docs/cmd/spo/file/file-move.mdx
+++ b/docs/docs/cmd/spo/file/file-move.mdx
@@ -34,6 +34,9 @@ m365 spo file move [options]
 : Behavior when a file or folder with the same name is already present at the destination. Allowed values: `fail`, `replace`, `rename`. Defaults to `fail`.
 
 `--includeItemPermissions`
+: (deprecated. Use option `withItemPermissions` instead) Ensure that item-level permissions are preserved during the move.
+
+`--withItemPermissions`
 : Ensure that item-level permissions are preserved during the move.
 
 `--bypassSharedLock`
@@ -75,7 +78,7 @@ m365 spo file move --webUrl https://contoso.sharepoint.com/sites/project-x --sou
 Move a file referenced by its ID to another document library and retain item-level permissions.
 
 ```sh
-m365 spo file move --webUrl https://contoso.sharepoint.com/sites/project-x --sourceId b8cc341b-9c11-4f2d-aa2b-0ce9c18bcba2 --targetUrl "/sites/project-x/My Documents" --includeItemPermissions
+m365 spo file move --webUrl https://contoso.sharepoint.com/sites/project-x --sourceId b8cc341b-9c11-4f2d-aa2b-0ce9c18bcba2 --targetUrl "/sites/project-x/My Documents" --withItemPermissions
 ```
 
 ## Response
