--- a/docs/docs/cmd/spo/list/list-add.mdx
+++ b/docs/docs/cmd/spo/list/list-add.mdx
@@ -127,7 +127,7 @@ m365 spo list add [options]
 : Boolean value that specifies whether the list is hidden. Valid values are `true`, `false`.
 
 `--includedInMyFilesScope [includedInMyFilesScope]`
-: Specifies whether this list is accessible to an app principal that has been granted an OAuth scope that contains the string “myfiles” by a case-insensitive comparison when the current user is a site collection administrator of the personal site that contains the list.
+: Specifies whether this list is accessible to an app principal that has been granted an OAuth scope that contains the string "myfiles" by a case-insensitive comparison when the current user is a site collection administrator of the personal site that contains the list.
 
 `--irmEnabled [irmEnabled]`
 : Gets or sets a Boolean value that specifies whether Information Rights Management (IRM) is enabled for the list.
