--- a/docs/docs/cmd/teams/chat/chat-member-add.mdx
+++ b/docs/docs/cmd/teams/chat/chat-member-add.mdx
@@ -26,10 +26,13 @@ m365 teams chat member add [options]
 : The role for the user to add. Valid values are: `owner`, `guest`. Defaults to `owner`.
 
 `--visibleHistoryStartDateTime [visibleHistoryStartDateTime]`
-: Include chat history until a certain point in time. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, or neither.
+: Include chat history until a certain point in time. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, `withAllHistory` or neither.
 
 `--includeAllHistory`
-: Include all chat history. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, or neither.
+: (deprecated. Use option `withChildTerms` instead) Include all chat history. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, `withAllHistory` or neither.
+
+`--withAllHistory`
+: Include all chat history. Specify either `visibleHistoryStartDateTime`, `includeAllHistory`, `withAllHistory` or neither.
 ```
 
 <Global />
@@ -58,7 +61,7 @@ m365 teams chat member add --chatId 19:8b081ef6-4792-4def-b2c9-c363a1bf41d5_5031
 Add a guest member by UPN to a Teams chat and share all chat history.
 
 ```sh
-m365 teams chat member add --chatId 19:8b081ef6-4792-4def-b2c9-c363a1bf41d5_5031bb31-22c0-4f6f-9f73-91d34ab2b32d@unq.gbl.spaces --userName nelson.wilke@fabrikam.com --role guest --includeAllHistory
+m365 teams chat member add --chatId 19:8b081ef6-4792-4def-b2c9-c363a1bf41d5_5031bb31-22c0-4f6f-9f73-91d34ab2b32d@unq.gbl.spaces --userName nelson.wilke@fabrikam.com --role guest --withAllHistory
 ```
 
 ## Response
