--- a/docs/docs/cmd/spo/tenant/tenant-site-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-site-list.mdx
@@ -28,9 +28,12 @@ m365 spo site list
 : type of sites to list. To be used with values like `GROUP#0` and `SITEPAGEPUBLISHING#0`. Specify either `type` or `webTemplate`, but not both.  
 
 `--filter [filter]`
-: filter to apply when retrieving sites
+: filter to apply when retrieving sites.
 
 `--includeOneDriveSites`
+: (deprecated. Use option `withOneDriveSites` instead) use this switch to include OneDrive sites in the result when retrieving sites. Do not specify the `type` or `webTemplate` options when using this.
+
+`--withOneDriveSites`
 : use this switch to include OneDrive sites in the result when retrieving sites. Do not specify the `type` or `webTemplate` options when using this.
 ```
 
@@ -52,34 +55,34 @@ To use this command you have to have permissions to access the tenant admin site
 
 ## Examples
 
-List all sites in the currently connected tenant
+List all sites in the currently connected tenant.
 
 ```sh
 m365 spo tenant site list
 ```
 
-List all group connected team sites in the currently connected tenant
+List all group connected team sites in the currently connected tenant.
 
 ```sh
 m365 spo tenant site list --type TeamSite
 ```
 
-List all communication sites in the currently connected tenant
+List all communication sites in the currently connected tenant.
 
 ```sh
 m365 spo tenant site list --type CommunicationSite
 ```
 
-List all group connected team sites that contain _project_ in the URL
+List all group connected team sites that contain _project_ in the URL.
 
 ```sh
 m365 spo tenant site list --type TeamSite --filter "Url -like 'project'"
 ```
 
-List all sites in the currently connected tenant including OneDrive sites
+List all sites in the currently connected tenant including OneDrive sites.
 
 ```sh
-m365 spo tenant site list --includeOneDriveSites
+m365 spo tenant site list --withOneDriveSites
 ```
 
 ## Response
