--- a/docs/docs/cmd/spo/homesite/homesite-add.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-add.mdx
@@ -2,14 +2,14 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo tenant homesite add
+# spo homesite add
 
 Adds a home site.
 
 ## Usage
 
 ```sh
-m365 spo tenant homesite add [options]
+m365 spo homesite add [options]
 ```
 
 ## Options
@@ -33,22 +33,18 @@ m365 spo tenant homesite add [options]
 
 <Global />
 
-## Remarks
-
-The corresponding site must already be present within the tenant.
-
 ## Examples
 
 Add a home site
 
 ```sh
-m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms"
+m365 spo homesite add --url "https://contoso.sharepoint.com/sites/testcomms"
 ```
 
 Add a home site with additional options
 
 ```sh
-m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms" --isInDraftMode true --vivaConnectionsDefaultStart false --audiences "af8c0bc8-7b1b-44b4-b087-ffcc8df70d16,754ff15c-76b1-44cb-88c7-0065a4d3cfb7" --order 2 
+m365 spo homesite add --url "https://contoso.sharepoint.com/sites/testcomms" --isInDraftMode true --vivaConnectionsDefaultStart false --audiences "af8c0bc8-7b1b-44b4-b087-ffcc8df70d16,754ff15c-76b1-44cb-88c7-0065a4d3cfb7" --order 2 
 ```
 
 ## Response
@@ -103,7 +99,7 @@ m365 spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcom
   <TabItem value="Markdown">
 
   ```md
-  # spo tenant homesite add --url "https://contoso.sharepoint.com/sites/testcomms"
+  # spo homesite add --url "https://contoso.sharepoint.com/sites/testcomms"
 
   Date: 12/23/2024
 
