Updated release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,24 @@ sidebar_position: 4
 
 # Release notes
 
+## 10.5.0 (Beta)
+
+### New commands
+
+**Microsoft Graph:**
+
+- [graph directoryextension add](../cmd/graph/directoryextension/directoryextension-add.mdx) - creates a new directory extension [#6316](https://github.com/pnp/cli-microsoft365/issues/6316)
+- [graph directoryextension get](../cmd/graph/directoryextension/directoryextension-get.mdx) - retrieves a directory extension [#6613](https://github.com/pnp/cli-microsoft365/issues/6613)
+- [graph directoryextension remove](../cmd/graph/directoryextension/directoryextension-remove.mdx) - removes a directory extension [#6614](https://github.com/pnp/cli-microsoft365/issues/6614)
+
+**SharePoint:**
+
+- [spo page section remove](../cmd/spo/page/page-section-remove.mdx) - removes a section from a modern page [#6541](https://github.com/pnp/cli-microsoft365/issues/6541)
+
+### Changes
+
+- removed double slashes on API requests [#6618](https://github.com/pnp/cli-microsoft365/issues/6618)
+
 ## [v10.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.4.0)
 
 ### New commands
